# logx

./: .gitignore  CMakeLists.txt  README.md
src/: logx.c  logx.h  main.c  tests.c
